@@ -2,6 +2,7 @@
 
 	* Menu
 	Fiddled a bit with the in game menu
+	Made the minimum version check of python work
 
 2001-11-04  Mads Bondo Dydensborg  <madsdyd@mother>
 
